@@ -370,11 +370,11 @@ public class Extender implements BundleTrackerCustomizer, ServiceTrackerCustomiz
                 BufferedReader in = new BufferedReader(new InputStreamReader(configFile.openStream()));
                 String className = in.readLine();
                 in.close();
-                Class cls = bundle.loadClass(className);
+                Class<?> cls = bundle.loadClass(className);
                 if (!ScriptEngineFactory.class.isAssignableFrom(cls)) {
                     throw new IllegalStateException("Invalid ScriptEngineFactory: " + cls.getName());
                 }
-                ScriptEngineFactory factory = (ScriptEngineFactory) cls.newInstance();
+                ScriptEngineFactory factory = (ScriptEngineFactory) cls.getConstructor().newInstance();
                 List<String> names = factory.getNames();
                 for (String test : names) {
                     if (test.equals(name)) {
